--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "vue-cli-service build --mode test"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
+    "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
+    "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.4",
+    "path": "^0.12.7",
+    "postcss-pxtorem": "^5.1.1",
+    "vant": "^2.8.3",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
