--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,8 @@
 NODE_ENV = 'development'
 # must start with VUE_APP_
 VUE_APP_ENV = 'development'
-VUE_APP_BASE_API = '/api'
-VUE_APP_BASE_URL = 'https://api.cnwgun.com'
+VUE_APP_BASE_API = '/api/v1'
+VUE_APP_BASE_URL = 'http://api.tah.imtda.com/'
+#appid
+VUE_APP_WECHAT_APPID='wx738342143a6c36ed'
+VUE_APP_WECHAT_AUTH_URL='http://tah.imtda.com/auth.html'
