--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "babel-plugin-import": "^1.13.0",
     "compression-webpack-plugin": "^4.0.0",
     "core-js": "^3.6.4",
+    "echarts": "^4.8.0",
+    "good-storage": "^1.1.1",
+    "jquery": "^3.5.1",
+    "js-cookie": "^2.2.1",
     "path": "^0.12.7",
     "postcss-pxtorem": "^5.1.1",
     "vant": "^2.8.3",
+    "vconsole": "^3.3.4",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
